--- a/tutorial/ch-grammar.tex
+++ b/tutorial/ch-grammar.tex
@@ -83,7 +83,7 @@ followed by optional pre-/post-conditions and the list of state variables modifi
 
 \end{grammar}
 
-\paratitle{Instance declarations} allow the instantiation (duh!) of other modules. It consists of the instance name, the name of the module being instantiated and the list of mappings for the instances' inputs, output and shared variables. 
+\paratitle{Instance declarations} allow the instantiation (duh!) of other modules. They consist of the instance name, the name of the module being instantiated and the list of mappings for the instances' inputs, output and shared variables. 
 \begin{grammar}
      <InstanceDecl> ::= \keywordbf{instance} <Id> `:' <Id> <ArgMapList> `;'
 
