--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -116,6 +116,8 @@
 
 \begin{document}
 \title{Getting Started with \uclid{}}
+\author{Pramod Subramanyan and Sanjit A. Seshia \\
+        \textit{\{spramod, sseshia\}@eecs.berkeley.edu}}
 \date{January 2018}
 \maketitle
 
