--- a/tutorial/ch-compositionality.tex
+++ b/tutorial/ch-compositionality.tex
@@ -163,10 +163,13 @@ Isolating commonly used types into a single module in this manner allows the con
 A convenient mechanism for abstraction in \uclid{} is through the use of uninterpreted functions and types.
 
 \subsection{Uninterpreted Types}
-Example~\ref{ex:cpu-cpu-p1} shows the use of the \emph{uninterpreted type}: \codelike{regindex_t} on line~9. The index type to the register is not defined, this allows us to reason about an abstract register file that has an undefined (and unbounded) number of entries.
+Example~\ref{ex:cpu-cpu-p1} shows the use of the \emph{uninterpreted type}: \codelike{regindex_t} on line~9. The index type to the register is an \emph{abstract} type, as opposed to a specific type (e.g. \codelike{bv3}). This allows us to reason about an abstract register file that has an undefined (and unbounded) number of entries, as opposed to proving facts about some specific register file implementation, potentially enabling more general proofs about system behavior.
 
 \subsection{Uninterpreted Functions}
-Values belonging to an uninterpreted type can be created using \emph{uninterpreted functions}. The functions \codelike{inst2op}, \codelike{inst2reg0}, \codelike{inst2reg1}, \codelike{inst2imm} and \codelike{inst2addr} on lines~20-24 of Example~\ref{ex:cpu-cpu-p1} are all examples of uninterpreted functions. These functions allow us to reason about an abstract CPU model without considering specific instruction encodings or decoder models.
+Values belonging to an uninterpreted type can be created using \emph{uninterpreted functions}. The functions \codelike{inst2op}, \codelike{inst2reg0}, \codelike{inst2reg1}, \codelike{inst2imm} and \codelike{inst2addr} on lines~20-24 of Example~\ref{ex:cpu-cpu-p1} are all examples of uninterpreted functions. An uninterpreted function $f$ is a function about which we know nothing, except that it is a function; i.e. $\forall x_1, x_2.~ x_1 = x_2 \implies f(x_1) = f(x_2)$.
+
+Uninterpreted functions allow us to reason about an abstract CPU model without considering specific instruction encodings or decoder models. This could potentially lead to more general proofs as well as more scalable automated proofs. 
+
 
 \section{Procedure Definition}
 Besides modules, another way of managing model complexity in \uclid{} is through the use of \emph{procedures}. Example~\ref{ex:cpu-cpu-p1} defines the \keyword{procedure} \codelike{exec_inst} on line~29. The procedure takes two arguments: \codelike{inst} and \codelike{pc} and returns two values: \codelike{result} and \codelike{pc_next}.
@@ -178,7 +181,7 @@ Procedures are invoked using the \keyword{call} keyword. In Example~\ref{ex:cpu-
 
 \section{Module Instantiation and Scheduling}
 
-Modules are instantiated using the \keyword{instance} keyword. Lines 14~and~15 of Example~\ref{ex:cpu-main} show two instantiations of the module \codelike{cpu}. For each instance, the module input \codelike{imem} is wired to the state variable \codelike{imem}.
+Modules are instantiated using the \keyword{instance} keyword. Lines 14~and~15 of Example~\ref{ex:cpu-main} show two instantiations of the module \codelike{cpu}. For each instance, the module input \codelike{imem} is mapped to the state variable \codelike{imem} of module \codelike{main}.
 
 Scheduling of instantiated modules is explicit and synchronous. The two \keyword{next} statements on lines 22~and~23 of Example~\ref{ex:cpu-main} invoke the next state transitions of the two instances of the \codelike{cpu} module.
 
@@ -186,7 +189,7 @@ Scheduling of instantiated modules is explicit and synchronous. The two \keyword
 The state variables of an instantiated module are accessed using the \codelike{->} operator. The four invariants on lines 27-32 of Example~\ref{ex:cpu-main}, refer to the registers, memory, pc and instruction variables of the two instantiated modules. These invariants state that both instances must have identical values for these state variables.
 
 
-\section{Running \uclid{} On The CPU Model}
+\section{Running \uclid{}}
 
 Executing \uclid{} on the complete CPU model shows that CPU is in fact deterministic. 
 
@@ -198,4 +201,4 @@ $ uclid examples/tutorial/ex4.1-cpu.ucl4
 \end{Verbatim}
 
 \subsection{Exercise: Inductive Proof of CPU model}
-Prove determinism of the CPU model using induction rather than bounded model checking. You will need to add inductive invariants relating the two instances in order to strengthen the induction hypothesis.
+Prove determinism of the CPU model using induction rather than bounded model checking. You will need to add strengthening inductive invariants relating the two CPU instances.
