renaming .ucl4 to .ucl.

--- a/tutorial/ch-basics.tex
+++ b/tutorial/ch-basics.tex
@@ -120,7 +120,7 @@ As in Example~\ref{ex:fib-model}, the verification script in Example~\ref{ex:alu
 Running \uclid{} on Example~\ref{ex:alu} produces the following output.
 
 \begin{Verbatim}[frame=single, samepage=true]
-$ uclid examples/tutorial/ex2.1-alu.ucl4 
+$ uclid examples/tutorial/ex2.1-alu.ucl 
 6 assertions passed.
 0 assertions failed.
 0 assertions indeterminate.
