--- a/tutorial/ch-compositionality.tex
+++ b/tutorial/ch-compositionality.tex
@@ -194,7 +194,7 @@ The state variables of an instantiated module are accessed using the \codelike{-
 Executing \uclid{} on the complete CPU model shows that CPU is in fact deterministic. 
 
 \begin{Verbatim}[frame=single, samepage=true]
-$ uclid examples/tutorial/ex4.1-cpu.ucl4 
+$ uclid examples/tutorial/ex4.1-cpu.ucl 
 16 assertions passed.
 0 assertions failed.
 0 assertions indeterminate.
