--- a/tutorial/ch-introduction.tex
+++ b/tutorial/ch-introduction.tex
@@ -137,7 +137,7 @@ Invoke \uclid{} on a model is easy. Just run the \codelike{uclid} binary and pro
 Example~\ref{ex:fib-model} is part of the \uclid{} distribution in the \codelike{examples/tutorial/} sub-directory. You can run \uclid{} on this model as:
 
 \begin{verbatim}
-$ uclid examples/tutorial/ex1.1-fib-model.ucl4 
+$ uclid examples/tutorial/ex1.1-fib-model.ucl 
 \end{verbatim}
 
 This should produce the following output.
