--- a/examples/README
+++ b/examples/README
@@ -5,23 +5,23 @@ exception that all of the CPU model is in ex4.1-cpu but the tutorial presents
 it in pieces as Examples 4.1, 4.2, 4.3 and 4.4
 
 tutorials/
-  - ex1.1-fib-model.ucl4
-  - ex2.1-alu.ucl4
-  - ex3.1-fib-induction.ucl4
-  - ex3.2-fib-induction-cex.ucl4
-  - ex3.3-fib-induction-proof.ucl4
-  - ex4.1-cpu.ucl4
+  - ex1.1-fib-model.ucl
+  - ex2.1-alu.ucl
+  - ex3.1-fib-induction.ucl
+  - ex3.2-fib-induction-cex.ucl
+  - ex3.3-fib-induction-proof.ucl
+  - ex4.1-cpu.ucl
 
 
-cpu_unint_addr 
+cpu_unint_addr.ucl
 - This is the CPU model from Chapter 4 of the tutorial but uses uninterpreted
   types for the addresses.
 
-setuid
+setui.ucl
 - This is a model based on the automaton in the paper: 
   Setuid Demystified. Chen, Wagen and Dean [Usenix Security 2002].
 
-setuid_fixed
+setuid_fixe.ucl
  - This is a "fixed" version of the setuid model.
 
 
