--- a/tutorial/ch-compositionality.tex
+++ b/tutorial/ch-compositionality.tex
@@ -1,4 +1,6 @@
-\chapter{Compositional Reasoning with Modules}
+\chapter{Compositional Modeling and Reasoning}
+\label{ch:compositional}
+
 This chapter describes \uclid{}'s features for compositional and modular verification.
 
 We will use a running example of a CPU model constructed in the \uclid{} and use bounded model checking to prove that the execution of this CPU is deterministic: i.e. we show that given two identical instruction memories, the state updates performed by this CPU will be identical.
