--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -36,7 +36,7 @@
 \definecolor{backcolour}{rgb}{0.95,0.95,0.92}
 \definecolor{darkmagenta}{rgb}{0.55,0,0.55}
 
-\newcommand{\uclid}{\textsc{Uclid5}}
+\newcommand{\uclid}{{\textsc{Uclid5}}\xspace}
 \newcommand{\keyword}[1]{\textcolor{darkmagenta}{\texttt{#1}}}
 \newcommand{\ident}[1]{\textcolor{black}{\texttt{#1}}}
 \newcommand{\keywordbf}[1]{\textcolor{darkmagenta}{\texttt{{#1}}}}
@@ -115,7 +115,7 @@
 }
 
 \begin{document}
-\title{Getting Started with \uclid{}}
+\title{Getting Started with {\uclid}}
 \author{Pramod Subramanyan and Sanjit A. Seshia \\
         \textit{\{spramod, sseshia\}@eecs.berkeley.edu}}
 \date{January 2018}
