--- a/tutorial/ch-introduction.tex
+++ b/tutorial/ch-introduction.tex
@@ -1,10 +1,12 @@
 \chapter{Introduction}
 
-\uclid{} is a modeling language that supports verification and synthesis. The \uclid{} toolchain aims to:
+\uclid{} is a software toolkit for the formal modeling, specification,
+verification, and synthesis of computational systems. 
+The \uclid{} toolchain aims to:
 \begin{enumerate}
-\item Enable modeling of finite and infinite state transition systems.
-\item Verification of safety and hypersafety (k-safety) properties on these systems.
-\item Allow syntax-guided synthesis of models and model invariants on these transitions systems.
+	\item Enable compositional (modular) modeling of finite and infinite state transition systems across a range of concurrency models;
+\item Verification of a range of properties, including assertions, invariants, and temporal properties, and % mention hyperproperties in a future release
+\item Integrate modeling and verification with algorithmic and inductive synthesis.
 \end{enumerate}
 
 This document serves as introduction to the \uclid{} modeling language and toolchain.
