--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -128,6 +128,10 @@
 \input{ch-basics}
 \input{ch-verification}
 \input{ch-compositionality}
+
+\bibliographystyle{plain}
+\bibliography{refs}
+
 \appendix
 \input{ch-grammar}
 
