--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -115,7 +115,7 @@
 }
 
 \begin{document}
-\title{Getting Started with {\uclid}}
+\title{Getting Started with {\uclid}\\Alpha release, version 0.8}
 \author{Pramod Subramanyan and Sanjit A. Seshia \\
         \textit{\{spramod, sseshia\}@eecs.berkeley.edu}}
 \date{January 2018}
