--- a/tutorial/ch-introduction.tex
+++ b/tutorial/ch-introduction.tex
@@ -57,7 +57,7 @@ A simple \uclid{} module that computes the Fibonacci sequence is shown in Exampl
 
 The top-level syntactic structure in \uclid{} is a \keywordbf{module}. All modeling, verification and synthesis code in \uclid{} is contained within modules. In Example~\ref{ex:fib-model}, we have defined one \keyword{module} named \ident{main}. This module starts on line 1 and ends on line 18. The module can be conceptually split into three parts: a system model, a specification and proof script. 
 
-In the example, these three conceptual parts are also kept separate in the code.\footnote{This is not required by \uclid{} syntax, as \keywordbf{invariant} declarations and assumptions can be interleaved with \keyword{init}, \keyword{next}, \keyword{var} declarations as well other types of declarations. However, keeping these conceptually different parts of separate is good design practice. \uclid{} does require that if a \keyword{control} block is specified, then it is the very last element of a module.} The following subsections will describe each of these sections of the module. 
+In the example, these three conceptual parts are also kept separate in the code.\footnote{This is not required by \uclid{} syntax, as \keywordbf{invariant} declarations and assumptions can be interleaved with \keyword{init}, \keyword{next}, \keyword{var} declarations as well other types of declarations. However, keeping these conceptually different parts separate is good design practice. \uclid{} does require that if a \keyword{control} block is specified, then it is the very last element of a module.} The following subsections will describe each of these sections of the module. 
 
 \subsubsection{The System Model}
 This part of a \uclid{} module describes the functionality of the transition system that is being modeled: it tells us \emph{what the system does}.
